[project]
name = "reddit-mcp"
version = "0.1.0"
description = "Reddit MCP Server"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Arindam Majumder"}
]
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.6.0",
    "praw",
    "python-dotenv>=1.1.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "nbstripout>=0.8.1",
    "pytest>=8.4.1",
    "ruff>=0.12.3",
]
